--- a/app/views/sysconfigs/_sysconfigs_list.html.erb
+++ b/app/views/sysconfigs/_sysconfigs_list.html.erb
@@ -11,19 +11,19 @@
 
 	<h2>Current Config Has Following Hardwares</h2><hr>
 
-	<ul>
+	<table class="table table-striped table-bordered table-condensed">
 		<% if @currentsysconfig.devices.count != 0 then %>
 			<% @currentsysconfig.devices.each do |d| %>
-				<li>
-					<div class="span3"><%= d.name %></div>
-					<div class="span3">Position is:<%= Sysconfigrelationship.find_by_sysconfig_id_and_device_id(@currentsysconfig,d.id).position %></div> 
-					<div class="span1 offset1"><%= link_to "delete", Sysconfigrelationship.find_by_sysconfig_id_and_device_id(@currentsysconfig,d.id), method: :delete, data: { confirm: "Sure?" }, class: "toright" %></div>
-				</li>
+				<tr>
+					<td><%= d.name %></td>
+					<td>Position is:<%= Sysconfigrelationship.find_by_sysconfig_id_and_device_id(@currentsysconfig,d.id).position %></td> 
+					<td><%= link_to "delete", Sysconfigrelationship.find_by_sysconfig_id_and_device_id(@currentsysconfig,d.id), method: :delete, data: { confirm: "Sure?" }, class: "toright" %></td>
+				</tr>
 			<% end %>
 		<% else %>
 			<h2><br>No devices existed in current config</h2>
 		<% end %>
-	</ul>
+	</table>
 
 	<% if !Execution.find_by_sysconfig_id(@currentsysconfig.id) then %>
 
