--- a/app/views/systems/_devices_list.html.erb
+++ b/app/views/systems/_devices_list.html.erb
@@ -2,15 +2,17 @@
 
 <ul>
 	<% if @devicelist != nil then %>
-		<% @devicelist.each do |d| %>
-			<% if d.devicetype.devicecate == @selectcate then%>
-			<li>
-				<div class="span3"><%= d.name %></div>
-				<div class="span3">type is:<%= d.devicetype.name%></div> 
-				<div class="span1 offset1"><%= link_to "delete", Avlrelationship.find_by_system_id_and_device_id(@selectsystem,d.id), method: :delete, data: { confirm: "Sure?" }, class: "toright" if current_user == System.find_by_id(@selectsystem).user%></div>
-			</li>
+		<table class="table table-striped table-bordered table-condensed">
+			<% @devicelist.each do |d| %>
+				<% if d.devicetype.devicecate == @selectcate then%>
+				<tr>
+					<td><%= d.name %></td>
+					<td>type is:<%= d.devicetype.name%></td> 
+					<td><%= link_to "delete", Avlrelationship.find_by_system_id_and_device_id(@selectsystem,d.id), method: :delete, data: { confirm: "Sure?" }, class: "toright" if current_user == System.find_by_id(@selectsystem).user%></td>
+				</tr>
+				<% end %>
 			<% end %>
-		<% end %>
+		</table>
 		<% if @devicelist.count == 0 then %><h2><br>No Components Existed</h2><% end %>
 	<% else %>
 		<h2><br>No Components Existed</h2>
