change main menu

--- a/app/views/executions/index.html.erb
+++ b/app/views/executions/index.html.erb
@@ -1,3 +1,4 @@
+<% provide(:executionpage, 'btn-large') %>
 <div class="row">
 	<div class="bkgrd span12">
 		<%= render 'executions/header_list' %>
