--- a/app/views/systems/_devices_list.html.erb
+++ b/app/views/systems/_devices_list.html.erb
@@ -36,8 +36,8 @@
 			<%= hidden_field_tag(:devicetype, @selecttype) %>
 			<div class="span10">
 				<div class="span"><%= select_tag 'selectdevice', options_from_collection_for_select( @devices, :id, :name) %></div>
-				<div class="span"><%= text_field_tag :maxnum, "Max Quantity", class: "textsize4" %></div>
-				<div class="span"><%= text_area_tag :note, "Note...", class: "textsize26" %></div>
+				<div class="span"><%= text_field_tag :maxnum, "", placeholder: "Max Quantity", class: "textsize4" %></div>
+				<div class="span"><%= text_area_tag :note, "",placeholder: "Note...", class: "textsize26" %></div>
 				<div class="span"><%= submit_tag "Add In" %></div>
 			</div>
 		<% end %>
