--- a/app/views/testcases/_casetypes_list.html.erb
+++ b/app/views/testcases/_casetypes_list.html.erb
@@ -26,7 +26,7 @@
 	<%= hidden_field_tag(:casecate, @selectcate) %>
 	<%= hidden_field_tag(:casetype, @selecttype) %>
 	<div><%= text_field_tag :name,"",placeholder: "Type Name" %></div>
-	<div><%= text_area_tag :note,"",placeholder "Note..." %></div>
+	<div><%= text_area_tag :note,"",placeholder: "Note..." %></div>
 	<div><%= submit_tag "Add Type" , :class => "submit" %></div>
 <% end %>
 <% end %>
