--- a/app/views/devices/_devices_list.html.erb
+++ b/app/views/devices/_devices_list.html.erb
@@ -8,7 +8,7 @@
 			<tr>
 				<td><%= d.name %></td>
 				<td><%= d.countnum %></td>
-				<td><%= link_to "delete", d, method: :delete, data: { confirm: "Sure?" }, class: "toright" %></td>
+				<td><%= link_to "delete", d, method: :delete, data: { confirm: "Sure?" }, class: "" %></td>
 			</tr>
 		<% end %>
 		</table>
