--- a/app/views/sysconfigs/_sysconfigs_list.html.erb
+++ b/app/views/sysconfigs/_sysconfigs_list.html.erb
@@ -1,23 +1,27 @@
 <% if @selectsut != nil then %>
 	<% if @current_user.lead? then %>
-		<div class="span">This Server is assigned to <%= User.find_by_id(Sut.find_by_id(@selectsut).holder_id).email %> currently</div><br>
+		<h2>SUT Assignment</h2><hr>
+		<div class="span10">This Server belongs to <%= User.find_by_id(Sut.find_by_id(@selectsut).holder_id).email %> currently</div>
+		<div class="span10"></div>
 		<%= form_tag controller: "sysconfigs", action: "selectuser" do %>
 			<%= hidden_field_tag(:selectsut, @selectsut) %>
 			<div class="span">Assign SUT to: <%= select_tag 'selectuser', options_from_collection_for_select( @users, :id, :email) %></div>
-			<div><%= submit_tag "OK" , :class => "submit" %></div>
+			<div><%= submit_tag "OK" , :class => "submit btn" %></div>
 		<% end %>
 		<hr>
 	<% end %>
 
 	<h2>Current Config Has Following Hardwares</h2><hr>
 
+	<% if Execution.find_by_sysconfig_id(@currentsysconfig.id) then @editable = true else @editable = false end %>
+	
 	<table class="table table-striped table-bordered table-condensed">
 		<% if @currentsysconfig.devices.count != 0 then %>
 			<% @currentsysconfig.devices.each do |d| %>
 				<tr>
 					<td><%= d.name %></td>
 					<td>Position is:<%= Sysconfigrelationship.find_by_sysconfig_id_and_device_id(@currentsysconfig,d.id).position %></td> 
-					<td><%= link_to "delete", Sysconfigrelationship.find_by_sysconfig_id_and_device_id(@currentsysconfig,d.id), method: :delete, data: { confirm: "Sure?" }, class: "toright" %></td>
+					<td><%= link_to "delete", Sysconfigrelationship.find_by_sysconfig_id_and_device_id(@currentsysconfig,d.id), method: :delete, data: { confirm: "Sure?" }, class: "toright" if @editable %></td>
 				</tr>
 			<% end %>
 		<% else %>
@@ -25,8 +29,7 @@
 		<% end %>
 	</table>
 
-	<% if !Execution.find_by_sysconfig_id(@currentsysconfig.id) then %>
-
+	<% if @editable then %>
 		<hr>
 		<%= form_tag controller: "sysconfigs", action: "selecttype" do %>
 			<%= hidden_field_tag(:devicetype, @selecttype) %>
@@ -46,17 +49,16 @@
 			</div>
 			<div><%= submit_tag "Add Devices" , :class => "submit" %></div>
 		<% end %>
-
+	<% else %>
+		<%= form_tag controller: "sysconfigs", action: "newconfig" do %>
+			<%= hidden_field_tag(:selecttype, @selecttype) %>
+			<%= hidden_field_tag(:selectsut, @selectsut) %>
+			<%= hidden_field_tag(:currentsysconfig_id, @currentsysconfig.id) %>
+			<div><%= submit_tag "New Config" , :class => "submit btn btn-large btn-danger toright" %></div>
+		<% end %>
 	<% end %>
 	
 	<br><hr><h2>Config History For Selected SUT</h2><hr>
-
-	<%= form_tag controller: "sysconfigs", action: "newconfig" do %>
-		<%= hidden_field_tag(:selecttype, @selecttype) %>
-		<%= hidden_field_tag(:selectsut, @selectsut) %>
-		<%= hidden_field_tag(:currentsysconfig_id, @currentsysconfig.id) %>
-		<div><%= submit_tag "Build New Config" , :class => "submit toright" %></div>
-	<% end %><br>
 
 	<ul>
 		<% if @sysconfiglist != nil then %>
