--- a/app/views/sysconfigs/_sysconfigs_list.html.erb
+++ b/app/views/sysconfigs/_sysconfigs_list.html.erb
@@ -6,7 +6,7 @@
 		<%= form_tag controller: "sysconfigs", action: "selectuser" do %>
 			<%= hidden_field_tag(:selectsut, @selectsut) %>
 			<div class="span">Assign SUT to: <%= select_tag 'selectuser', options_from_collection_for_select( @users, :id, :email) %></div>
-			<div><%= submit_tag "OK" , :class => "submit btn" %></div>
+			<div class="toright"><%= submit_tag "OK" , :class => "submit btn btn-primary btn-success" %></div>
 		<% end %>
 		<hr>
 	<% end %>
@@ -18,11 +18,11 @@
 	<table class="table table-striped table-bordered table-condensed">
 		<% if @currentsysconfig.devices.count != 0 then %>
 			<% @currentsysconfig.devices.each do |d| %>
-				<tr>
+				<% if d.devicetype.devicecate == "Hardware" then %><tr>
 					<td><%= d.name %></td>
 					<td>Position is:<%= Sysconfigrelationship.find_by_sysconfig_id_and_device_id(@currentsysconfig,d.id).position %></td> 
 					<td><%= link_to "delete", Sysconfigrelationship.find_by_sysconfig_id_and_device_id(@currentsysconfig,d.id), method: :delete, data: { confirm: "Sure?" }, class: "toright" if @editable %></td>
-				</tr>
+				</tr><% end %>
 			<% end %>
 		<% else %>
 			<h2><br>No devices existed in current config</h2>
@@ -47,7 +47,7 @@
 				<div><%= select_tag 'selectdevice', options_from_collection_for_select( @devices, :id, :name) %></div>
 				<div><%= text_field_tag :deviceposition, "Position", class: "textsize4" %></div>
 			</div>
-			<div><%= submit_tag "Add Devices" , :class => "submit" %></div>
+			<div><%= submit_tag "Add Devices" , :class => "submit btn btn-primary btn-danger" %></div>
 		<% end %>
 	<% else %>
 		<%= form_tag controller: "sysconfigs", action: "newconfig" do %>
