--- a/app/views/sysconfigs/_sysconfigs_list.html.erb
+++ b/app/views/sysconfigs/_sysconfigs_list.html.erb
@@ -66,7 +66,7 @@
 				<% @sysconfiglist.each do |d| %>
 					<li>
 						<div class="span4"><%= d.created_at %></div>
-						<div class="span4">by:<%= d.user.email if de.user != nil %></div> 
+						<div class="span4">by:<%= d.user.email if d.user != nil %></div> 
 					</li>
 				<% end %>
 			<% else %>
