--- a/app/views/executions/_testcases_list.html.erb
+++ b/app/views/executions/_testcases_list.html.erb
@@ -30,10 +30,10 @@ function changeresulttype() {
 		<%= hidden_field_tag(:selecttype, @selecttype) %>
 		<%= hidden_field_tag(:selectcase, @selectcase) %>
 		
-		<% if @envdevices != nil then %>
+		<% if @envdevices != nil then if @envdevices.count != 0 then %>
 			<div class="span3">Case Pamemeter: </div>
 			<div class="span6"><%= select_tag 'selectenvdevice', options_from_collection_for_select( @envdevices, :id, :name ) %></div>
-		<% end %>
+		<% end end %>
 		<div class="span3">Test Result: </div>
 		<div class="span"><%= select_tag 'testresult', options_for_select([["PASS", "pass"], ["FAIL", "fail"]],[@status, @status_value]), onchange: "changeresulttype()" %></div>
 		<div class="span"><%= text_field_tag 'moreresult', "", placeholder: "Provide Result Value", class: "textsize8" %></div>
@@ -46,11 +46,14 @@ function changeresulttype() {
 <ul>
 	<% if @executions != nil then if @executions.count != 0 then %>
 		<table class="table table-striped table-bordered table-condensed">
+			<tr><td>Case Name</td><td>Result</td><td>More Info</td><td>Tester</td><td>Operation</td></tr>
 			<% @executions.each do |d| %>
 				<tr>
 					<td><%= d.testcase.name if d.testcase != nil %></td>
-					<td>Result:<%= d.result %></td>
-					<td><%= link_to "delete", d, method: :delete, data: { confirm: "Sure?" }, class: "toright" %></td>
+					<td><%= d.result %></td>
+					<td><%= if d.result == "fail" then "CR:" + d.bug else d.bug end %></td>
+					<td><%= d.user.email if d.user != nil %></td>
+					<td><%= link_to "delete", d, method: :delete, data: { confirm: "Sure?" }, class: "" %></td>
 				</tr>
 			<% end %>
 		</table>
