--- a/app/views/sysconfigs/_sysconfigs_list.html.erb
+++ b/app/views/sysconfigs/_sysconfigs_list.html.erb
@@ -1,19 +1,21 @@
 <% if @selectsut != nil then %>
 	<% if @current_user.lead? then %>
-		<h2>SUT Assignment</h2><hr>
-		<div class="span10">This Server belongs to <%= User.find_by_id(Sut.find_by_id(@selectsut).holder_id).email %> currently</div>
-		<div class="span10"></div>
-		<%= form_tag controller: "sysconfigs", action: "selectuser" do %>
-			<%= hidden_field_tag(:selectsut, @selectsut) %>
-			<div class="span">Assign SUT to: <%= select_tag 'selectuser', options_from_collection_for_select( @users, :id, :email) %></div>
-			<div class="toright"><%= submit_tag "OK" , :class => "submit btn btn-primary btn-success" %></div>
-		<% end %>
-		<hr><br>
+		<div class="row">
+			<h2>SUT Assignment</h2><hr>
+			<div class="span10">This Server belongs to <%= User.find_by_id(Sut.find_by_id(@selectsut).holder_id).email %> currently</div>
+			<div class="span10"></div>
+			<%= form_tag controller: "sysconfigs", action: "selectuser" do %>
+				<%= hidden_field_tag(:selectsut, @selectsut) %>
+				<div class="span">Assign SUT to: <%= select_tag 'selectuser', options_from_collection_for_select( @users, :id, :email) %></div>
+				<div class="toright"><%= submit_tag "OK" , :class => "submit btn btn-primary btn-success" %></div>
+			<% end %>
+		</div>
+		<hr>
 	<% end %>
 
 	<h2>Current Config Has Following Hardwares</h2><hr>
 
-	<% if Execution.find_by_sysconfig_id(@currentsysconfig.id) then @editable = true else @editable = false end %>
+	<% if Execution.find_by_sysconfig_id(@currentsysconfig.id) then @editable = false else @editable = true end %>
 	
 	<table class="table table-striped table-bordered table-condensed">
 		<% if @currentsysconfig.devices.count != 0 then %>
@@ -25,38 +27,39 @@
 				</tr><% end %>
 			<% end %>
 		<% else %>
-			<h2><br>No devices existed in current config</h2>
+			<div class="alarmtext center">No devices existed in current config</div>
 		<% end %>
 	</table>
 
-	<% if @editable then %>
-		<hr>
-		<%= form_tag controller: "sysconfigs", action: "selecttype" do %>
-			<%= hidden_field_tag(:devicetype, @selecttype) %>
-			<%= hidden_field_tag(:selectsut, @selectsut) %>
-			<div class="span11">
-				<div><%= select_tag 'selecttype', options_from_collection_for_select( @devicetypes, :id, :name, @selecttype), onchange: "this.form.submit();"  %></div>
-			</div>
-		<% end %>
+	<div class="row">
+		<% if @editable then %>
+			<%= form_tag controller: "sysconfigs", action: "selecttype" do %>
+				<%= hidden_field_tag(:devicetype, @selecttype) %>
+				<%= hidden_field_tag(:selectsut, @selectsut) %>
+				<div class="span11">
+					<div class="span"><%= select_tag 'selecttype', options_from_collection_for_select( @devicetypes, :id, :name, @selecttype), onchange: "this.form.submit();"  %></div>
+				</div>
+			<% end %>
 
-		<%= form_tag controller: "sysconfigs", action: "adddevice" do %>
-			<%= hidden_field_tag(:selecttype, @selecttype) %>
-			<%= hidden_field_tag(:selectsut, @selectsut) %>
-			<%= hidden_field_tag(:currentsysconfig_id, @currentsysconfig.id) %>
-			<div class="span10">
-				<div><%= select_tag 'selectdevice', options_from_collection_for_select( @devices, :id, :name) %></div>
-				<div><%= text_field_tag :deviceposition, "Position", class: "textsize4" %></div>
-			</div>
-			<div class="toright"><%= submit_tag "Add Devices" , :class => "submit btn btn-primary btn-danger" %></div>
+			<%= form_tag controller: "sysconfigs", action: "adddevice" do %>
+				<%= hidden_field_tag(:selecttype, @selecttype) %>
+				<%= hidden_field_tag(:selectsut, @selectsut) %>
+				<%= hidden_field_tag(:currentsysconfig_id, @currentsysconfig.id) %>
+				<div class="span11">
+					<div class="span"><%= select_tag 'selectdevice', options_from_collection_for_select( @devices, :id, :name) %></div>
+					<div class="span"><%= text_field_tag :deviceposition, "Position", class: "textsize4" %></div>
+				</div>
+				<div class="toright"><%= submit_tag "Add Devices" , :class => "submit btn btn-primary btn-danger" %></div>
+			<% end %>
+		<% else %>
+			<%= form_tag controller: "sysconfigs", action: "newconfig" do %>
+				<%= hidden_field_tag(:selecttype, @selecttype) %>
+				<%= hidden_field_tag(:selectsut, @selectsut) %>
+				<%= hidden_field_tag(:currentsysconfig_id, @currentsysconfig.id) %>
+				<div class="toright"><%= submit_tag "Change Config" , :class => "submit btn btn-large btn-danger" %></div>
+			<% end %>
 		<% end %>
-	<% else %>
-		<%= form_tag controller: "sysconfigs", action: "newconfig" do %>
-			<%= hidden_field_tag(:selecttype, @selecttype) %>
-			<%= hidden_field_tag(:selectsut, @selectsut) %>
-			<%= hidden_field_tag(:currentsysconfig_id, @currentsysconfig.id) %>
-			<div class="toright"><%= submit_tag "Change Config" , :class => "submit btn btn-large btn-danger" %></div>
-		<% end %>
-	<% end %>
+	</div>
 	
 	<br><hr><h2>Config History For Selected SUT</h2><hr>
 
