--- a/app/views/executions/_suts_list.html.erb
+++ b/app/views/executions/_suts_list.html.erb
@@ -10,10 +10,10 @@
 			</div>
 		<% end %>
 	<% else %>
-		<h2><br>No SUTs existed</h2>
+		<div class="alarmtext center">You do not have any SUTs<br>Ask lead to assign one</div>
 	<% end %>
 	<% else %>
-		<h2><br>No SUTs existed</h2>
+		<div class="alarmtext center">You do not have any SUTs<br>Ask lead to assign one</div>
 	<% end %>
 
 <% end %>
