--- a/app/assets/stylesheets/textsize.css.scss
+++ b/app/assets/stylesheets/textsize.css.scss
@@ -1,8 +1,24 @@
 
 .bkgrd {
   margin-top: 10px;
-  padding-top: 20px;
+  padding-top: 10px;
   background-color: WhiteSmoke;
+}
+
+.newpost {
+  margin-top: 10px;
+  margin-bottom: 30px;
+  margin-left: 10px;
+  margin-right: 10px;
+  padding: 10px;
+  background-color: WhiteSmoke;
+  border: 1px solid;
+  color: #999;
+}
+
+.alarmtext {
+	color: Red;
+	margin: 10px;
 }
 
 .toright {
@@ -22,6 +38,10 @@
 
 .textsize8 {
 	width: 160px;
+}
+
+.textsize12 {
+	width: 240px
 }
 
 .textsize16 {
