--- a/app/views/devices/_devicetypes_list.html.erb
+++ b/app/views/devices/_devicetypes_list.html.erb
@@ -27,6 +27,6 @@
 	<%= hidden_field_tag(:devicetype, @selecttype) %>
 	<div><%= text_field_tag :name,"",placeholder: "Type Name" %></div>
 	<div><%= text_area_tag :note, "",placeholder: "Note..." %></div>
-	<div><%= submit_tag "Add Type" , :class => "submit" %></div>
+	<div><%= submit_tag "Add Type" , :class => "submit btn btn-primary btn-danger" %></div>
 <% end %>
 <% end %>
