--- a/app/views/executions/_testcases_list.html.erb
+++ b/app/views/executions/_testcases_list.html.erb
@@ -9,58 +9,61 @@ function changeresulttype() {
 }
 --></script>
 
-<h2>Execute A Testcase</h2>
+<% if @selectsut != nil then %>
+	<h2>Execute A Testcase</h2>
+	<div class="row">
+		<%= form_tag controller: "executions", action: "selecttype" do %>
+			<%= hidden_field_tag(:selectsut, @selectsut) %>
+			<div class="span3">Select Testcase Type: </div>
+			<div class="span6"><%= select_tag 'selecttype', options_from_collection_for_select( @casetypes, :id, :name, @selecttype ), onchange: "this.form.submit();" %></div>
+		<% end %>
 
-<div class="row">
-	<%= form_tag controller: "executions", action: "selecttype" do %>
-		<%= hidden_field_tag(:selectsut, @selectsut) %>
-		<div class="span3">Select Testcase Type: </div>
-		<div class="span6"><%= select_tag 'selecttype', options_from_collection_for_select( @casetypes, :id, :name, @selecttype ), onchange: "this.form.submit();" %></div>
-	<% end %>
+		<%= form_tag controller: "executions", action: "selectcase" do %>
+			<%= hidden_field_tag(:selectsut, @selectsut) %>
+			<%= hidden_field_tag(:selecttype, @selecttype) %>
+			<div class="span3">Select Testcase: </div>
+			<div class="span6"><%= select_tag 'selectcase', options_from_collection_for_select( @testcases, :id, :name, @selectcase ), onchange: "this.form.submit();" %></div>
+		<% end %>	
 
-	<%= form_tag controller: "executions", action: "selectcase" do %>
-		<%= hidden_field_tag(:selectsut, @selectsut) %>
-		<%= hidden_field_tag(:selecttype, @selecttype) %>
-		<div class="span3">Select Testcase: </div>
-		<div class="span6"><%= select_tag 'selectcase', options_from_collection_for_select( @testcases, :id, :name, @selectcase ), onchange: "this.form.submit();" %></div>
-	<% end %>	
-
-	<%= form_tag controller: "executions", action: "addcase" do %>
-		<%= hidden_field_tag(:selectsut, @selectsut) %>
-		<%= hidden_field_tag(:selecttype, @selecttype) %>
-		<%= hidden_field_tag(:selectcase, @selectcase) %>
-		
-		<% if @envdevices != nil then if @envdevices.count != 0 then %>
-			<div class="span3">Case Pamemeter: </div>
-			<div class="span6"><%= select_tag 'selectenvdevice', options_from_collection_for_select( @envdevices, :id, :name ) %></div>
-		<% end end %>
-		<div class="span3">Test Result: </div>
-		<div class="span"><%= select_tag 'testresult', options_for_select([["PASS", "pass"], ["FAIL", "fail"]],[@status, @status_value]), onchange: "changeresulttype()" %></div>
-		<div class="span"><%= text_field_tag 'moreresult', "", placeholder: "Provide Result Value", class: "textsize8" %></div>
-		<div><%= submit_tag "Confirm" , :class => "submit btn btn-danger btn-large" %></div>
-	<% end %>
-</div>
-<br>
-<hr>
-<br>
-<ul>
-	<% if @executions != nil then if @executions.count != 0 then %>
-		<table class="table table-striped table-bordered table-condensed">
-			<tr><td>Case Name</td><td>Result</td><td>More Info</td><td>Tester</td><td>Operation</td></tr>
-			<% @executions.each do |d| %>
-				<tr>
-					<td><%= d.testcase.name if d.testcase != nil %></td>
-					<td><%= d.result %></td>
-					<td><%= if d.result == "fail" then "CR:" + d.bug else d.bug end %></td>
-					<td><%= d.user.email if d.user != nil %></td>
-					<td><%= link_to "delete", d, method: :delete, data: { confirm: "Sure?" }, class: "" if d.user_id == current_user.id %></td>
-				</tr>
+		<%= form_tag controller: "executions", action: "addcase" do %>
+			<%= hidden_field_tag(:selectsut, @selectsut) %>
+			<%= hidden_field_tag(:selecttype, @selecttype) %>
+			<%= hidden_field_tag(:selectcase, @selectcase) %>
+			
+			<% if @envdevices != nil then if @envdevices.count != 0 then %>
+				<div class="span3">Case Pamemeter: </div>
+				<div class="span6"><%= select_tag 'selectenvdevice', options_from_collection_for_select( @envdevices, :id, :name ) %></div>
+			<% end end %>
+			<div class="span3">Test Result: </div>
+			<div class="span"><%= select_tag 'testresult', options_for_select([["PASS", "pass"], ["FAIL", "fail"]],[@status, @status_value]), onchange: "changeresulttype()" %></div>
+			<div class="span"><%= text_field_tag 'moreresult', "", placeholder: "Provide Result Value", class: "textsize8" %></div>
+			<div><%= submit_tag "Confirm" , :class => "submit btn btn-danger btn-large" %></div>
+		<% end %>
+	</div>
+	<br>
+	<hr>
+	<br>
+	<ul>
+		<% if @executions != nil then if @executions.count != 0 then %>
+			<table class="table table-striped table-bordered table-condensed">
+				<tr><td>Case Name</td><td>Result</td><td>More Info</td><td>Tester</td><td>Operation</td></tr>
+				<% @executions.each do |d| %>
+					<tr>
+						<td><%= d.testcase.name if d.testcase != nil %></td>
+						<td><%= d.result %></td>
+						<td><%= if d.result == "fail" then "CR:" + d.bug else d.bug end %></td>
+						<td><%= d.user.email if d.user != nil %></td>
+						<td><%= link_to "delete", d, method: :delete, data: { confirm: "Sure?" }, class: "" if d.user_id == current_user.id %></td>
+					</tr>
+				<% end %>
+			</table>
+				<% else %>
+				<h2><br>No executions existed</h2>
 			<% end %>
-		</table>
-			<% else %>
+		<% else %>
 			<h2><br>No executions existed</h2>
 		<% end %>
-	<% else %>
-		<h2><br>No executions existed</h2>
-	<% end %>
-</ul>
+	</ul>
+<% else %>
+	<h2>Please Select SUT first</h2>
+<% end %>
