--- a/app/views/sysconfigs/_sysconfigs_list.html.erb
+++ b/app/views/sysconfigs/_sysconfigs_list.html.erb
@@ -1,28 +1,30 @@
 <% if @selectsut != nil then %>
 	<% if @current_user.lead? then %>
 		<div class="row">
-			<h2>SUT Assignment</h2><hr>
-			<div class="span10">This Server belongs to <%= User.find_by_id(Sut.find_by_id(@selectsut).holder_id).email %> currently</div>
-			<div class="span10"></div>
+			<h2>SUT Assignment</h2>
+			<div class="center span10">This Server belongs to <%= User.find_by_id(Sut.find_by_id(@selectsut).holder_id).email %> currently</div>
+			<div class="center span10"> - </div>
 			<%= form_tag controller: "sysconfigs", action: "selectuser" do %>
 				<%= hidden_field_tag(:selectsut, @selectsut) %>
-				<div class="span">Assign SUT to: <%= select_tag 'selectuser', options_from_collection_for_select( @users, :id, :email) %></div>
-				<div class="toright"><%= submit_tag "OK" , :class => "submit btn btn-primary btn-success" %></div>
+				<div class="span10 center">Assign SUT to: <%= select_tag 'selectuser', options_from_collection_for_select( @users, :id, :email) %></div>
+				<div class="span1"><%= submit_tag "OK" , :class => "submit btn btn-primary btn-success" %></div>
 			<% end %>
 		</div>
 		<hr>
 	<% end %>
 
-	<h2>Current Config Has Following Hardwares</h2><hr>
+	<h2>Current Config Has Following Hardwares</h2>
 
 	<% if Execution.find_by_sysconfig_id(@currentsysconfig.id) then @editable = false else @editable = true end %>
 	
 	<table class="table table-striped table-bordered table-condensed">
 		<% if @currentsysconfig.devices.count != 0 then %>
+			<tr><td>Name</td><td>Type</td><td>Position</td><td>Operation</td></tr>
 			<% @currentsysconfig.devices.each do |d| %>
 				<% if d.devicetype.devicecate == "Hardware" then %><tr>
 					<td><%= d.name %></td>
-					<td>Position is:<%= Sysconfigrelationship.find_by_sysconfig_id_and_device_id(@currentsysconfig,d.id).position %></td> 
+					<td><%= d.devicetype.name %></td>
+					<td><%= Sysconfigrelationship.find_by_sysconfig_id_and_device_id(@currentsysconfig,d.id).position %></td> 
 					<td><%= link_to "delete", Sysconfigrelationship.find_by_sysconfig_id_and_device_id(@currentsysconfig,d.id), method: :delete, data: { confirm: "Sure?" }, class: "toright" if @editable %></td>
 				</tr><% end %>
 			<% end %>
@@ -31,37 +33,37 @@
 		<% end %>
 	</table>
 
-	<div class="row">
-		<% if @editable then %>
-			<%= form_tag controller: "sysconfigs", action: "selecttype" do %>
-				<%= hidden_field_tag(:devicetype, @selecttype) %>
-				<%= hidden_field_tag(:selectsut, @selectsut) %>
-				<div class="span11">
-					<div class="span"><%= select_tag 'selecttype', options_from_collection_for_select( @devicetypes, :id, :name, @selecttype), onchange: "this.form.submit();"  %></div>
-				</div>
-			<% end %>
 
-			<%= form_tag controller: "sysconfigs", action: "adddevice" do %>
-				<%= hidden_field_tag(:selecttype, @selecttype) %>
-				<%= hidden_field_tag(:selectsut, @selectsut) %>
-				<%= hidden_field_tag(:currentsysconfig_id, @currentsysconfig.id) %>
-				<div class="span11">
-					<div class="span"><%= select_tag 'selectdevice', options_from_collection_for_select( @devices, :id, :name) %></div>
-					<div class="span"><%= text_field_tag :deviceposition, "Position", class: "textsize4" %></div>
-				</div>
-				<div class="toright"><%= submit_tag "Add Devices" , :class => "submit btn btn-primary btn-danger" %></div>
-			<% end %>
+		<% if @editable then %>
+			<div class="row newpost">
+				<h2>Add New Component To Current Config</h2>
+				<%= form_tag controller: "sysconfigs", action: "selecttype" do %>
+					<%= hidden_field_tag(:devicetype, @selecttype) %>
+					<%= hidden_field_tag(:selectsut, @selectsut) %>
+					<div class="span10"><%= select_tag 'selecttype', options_from_collection_for_select( @devicetypes, :id, :name, @selecttype), onchange: "this.form.submit();"  %></div>
+				<% end %>
+				<%= form_tag controller: "sysconfigs", action: "adddevice" do %>
+					<%= hidden_field_tag(:selecttype, @selecttype) %>
+					<%= hidden_field_tag(:selectsut, @selectsut) %>
+					<%= hidden_field_tag(:currentsysconfig_id, @currentsysconfig.id) %>
+					<div class="span10"><%= select_tag 'selectdevice', options_from_collection_for_select( @devices, :id, :name) %></div>
+					<div class="span4"><%= text_field_tag :deviceposition, "Position", class: "textsize4" %></div>
+					<div class="span toright"><%= submit_tag "Add Device In" , :class => "submit btn btn-primary btn-danger" %></div>
+				<% end %>
+			</div>
 		<% else %>
+			<div class="row">
 			<%= form_tag controller: "sysconfigs", action: "newconfig" do %>
 				<%= hidden_field_tag(:selecttype, @selecttype) %>
 				<%= hidden_field_tag(:selectsut, @selectsut) %>
 				<%= hidden_field_tag(:currentsysconfig_id, @currentsysconfig.id) %>
 				<div class="toright"><%= submit_tag "Change Config" , :class => "submit btn btn-large btn-danger" %></div>
 			<% end %>
+			</div>
 		<% end %>
-	</div>
+
 	
-	<br><hr><h2>Config History For Selected SUT</h2><hr>
+	<hr><h2>Config History For Selected SUT</h2>
 
 	<ul>
 		<% if @sysconfiglist != nil then %>
@@ -79,5 +81,5 @@
 	</ul>
 	
 <% else %>
-	<h2>Select or select SUT first</h2>
+	<h2>Please Select SUT first</h2>
 <% end %>
