--- a/app/views/devices/index.html.erb
+++ b/app/views/devices/index.html.erb
@@ -6,12 +6,12 @@
 	</div>
 </div>
 
-<div class="row-fluid">
-	<div class="bkgrd span4">
+<div id="allcontent" class="row-fluid">
+	<div id="leftcontent" class="bkgrd span4">
 		<%= render 'devices/devicetypes_list' %>
 	</div>
 
-	<div class="bkgrd span8">
+	<div id="rightcontent" class="bkgrd span8">
 		<%= render 'devices/devices_list' %>
 	</div>
 </div>
