--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>ANTON - Save you from mess!</title><br>
+    <title>ANTON - Save U from mess!</title>
     <%= stylesheet_link_tag    "application", media: "all" %>
     <%= javascript_include_tag "application" %>
+	<%= javascript_include_tag "prototype" %>
     <%= csrf_meta_tags %>
     <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -13,17 +14,19 @@
     <header class="navbar navbar-fixed-top navbar-inverse">
       <div class="navbar-inner">
         <div class="container">
-          <%= link_to "ANTON - Save you from mess!", '#', id: "logo" %>
-            <ul class="nav pull-right">
-			  <% if current_user %>
-			    <%= link_to "Users", '/priviledges' , class: "btn "+yield(:userpage) if current_user.email == "root@oracle.com" %>
-			    <%= link_to "Device", '/devices', class: "btn "+yield(:devicepage) if current_user.lead? %>
+          <%= link_to "ANTON - Save U from mess!", '#', id: "logo" %>
+		  <% if current_user %><div class="span toright">
+				<%= link_to "Users", '/priviledges' , class: "btn "+yield(:userpage) if current_user.email == "root@oracle.com" %>
+				<%= link_to "Device", '/devices', class: "btn "+yield(:devicepage) if current_user.lead? %>
 				<%= link_to "System", '/systems', class: "btn "+yield(:systempage) %>
 				<%= link_to "TestCase", '/testcases', class: "btn "+yield(:testcasepage) if current_user.lead? or current_user.engineer? %>
 				<%= link_to "Config", '/sysconfigs', class: "btn btn-primary "+yield(:configpage) if current_user.lead? or current_user.engineer?%>
 				<%= link_to "Execution", '/executions', class: "btn btn-primary "+yield(:executionpage) if current_user.engineer?%>
-				<%= link_to "Target", '#', class: "btn btn-success "+yield(:targetpage) if current_user.lead? or current_user.engineer?%>
-				<%= link_to "Achive", '/achivements', class: "btn btn-success "+yield(:achivepage) if current_user.lead? or current_user.engineer?%>
+				<%= link_to "In Building", '/tasks', class: "btn btn-success "+yield(:taskpage) if current_user.lead? or current_user.engineer?%>
+				<%= link_to "In Building", '/achivements', class: "btn btn-success "+yield(:achivepage) if current_user.lead? or current_user.engineer?%>
+		  </div><% end %>
+            <ul class="nav pull-right">
+			  <% if current_user %>
 				<li><%= link_to current_user.email, '#'%></li>
 				<li><%= link_to('LogOut', destroy_user_session_path, :method => :delete) %></li>
 				<li><%= link_to('ChangePwd', edit_registration_path(:user)) %></li>
