--- a/app/views/systems/_devices_list.html.erb
+++ b/app/views/systems/_devices_list.html.erb
@@ -3,7 +3,7 @@
 <ul>
 	<% if @devicelist != nil then %>
 		<table class="table table-striped table-bordered table-condensed">
-			<tr><td>Device Name</td><td>Type</td><%= if @selectcate == "Hardware" then <td>Max Cfg</td> end %><td>Opt</td></tr>
+			<tr><td>Device Name</td><td>Type</td><%= if @selectcate == "Hardware" then %><td>Max Cfg</td><% end %><td>Opt</td></tr>
 			<% @devicelist.each do |d| %>
 				<% if d.devicetype.devicecate == @selectcate then%>
 				<tr>
